# borsh-size-rs

./: .gitignore  Cargo.toml  README.md
borsh_size/: Cargo.toml
borsh_size/src/: lib.rs
borsh_size_derive/: Cargo.toml
borsh_size_derive/src/: lib.rs
tests/: borsh_size_derive_tests.rs
